--- a/_scss/carousel.scss
+++ b/_scss/carousel.scss
@@ -14,8 +14,8 @@
 	transition: 0.6s ease-in-out left;
 	padding: 0 0.5em 0 0;
 	img {
-		width: auto;
-		max-height: 221px;
+		width: 85%;
+		/* max-height: 221px; */
 		margin: 0 auto;
 		@include bp(44) {
 			max-height: 422px;
