--- a/_scss/carousel.scss
+++ b/_scss/carousel.scss
@@ -12,10 +12,10 @@
 	display: none;
 	position: relative;
 	transition: 0.6s ease-in-out left;
-	padding: 0 0.5em 0 0;
+	padding: 0;
 	img {
-		width: 85%;
-		/* max-height: 221px; */
+		width: auto;
+		max-height: 221px;
 		margin: 0 auto;
 		@include bp(44) {
 			max-height: 422px;
@@ -159,7 +159,7 @@
 }
 .carousel-control.right {
 	left: auto;
-	right: 0.5em;
+	right: 0;
 	svg {
 		right: 0;
 	}
@@ -211,7 +211,7 @@
 .carousel-control .icon-next:before {
 	content: '\203a';
 }
-.carousel-indicators {
+/* .carousel-indicators {
 	display: none;
 	position: absolute;
 	bottom: 10px;
@@ -225,9 +225,36 @@
 	@include bp(44) {
 		//display: block;
 	}
+}*/
+.carousel-indicators {
+	position: relative;
+	z-index: 15;
+	text-align: center;
+	width: 95%;
+	margin: 0 auto;
+	padding: 1em 0 0 0;
+	display: none;
+	@include bp(44) {
+		display: block;
+	}
 }
 .carousel-indicators li {
 	display: inline-block;
+	margin: 0 0.15em;
+	padding-bottom: 1em;
+}
+
+.carousel-indicators img {
+	max-height: 3.25em;
+	width: auto;
+	margin: 0 auto;
+	display: block;
+	@include bp(62.5) {
+		max-height: 5em;
+	}
+}
+
+/* display: inline-block;
 	width: 10px;
 	height: 10px;
 	margin: 1px;
@@ -238,12 +265,13 @@
 	background-color: #000 \9;
 	background-color: rgba(0, 0, 0, 0);
 }
+
 .carousel-indicators .active {
 	margin: 0;
 	width: 12px;
 	height: 12px;
 	background-color: #fff;
-}
+}*/
 .carousel-caption {
 	position: absolute;
 	left: 15%;
@@ -281,8 +309,5 @@
 		left: 20%;
 		right: 20%;
 		padding-bottom: 30px;
-	}
-	.carousel-indicators {
-		bottom: 20px;
 	}
 }
