--- a/_scss/home.scss
+++ b/_scss/home.scss
@@ -5,7 +5,7 @@
 	img {
 		display: block;
 		margin: 0 auto 1em;
-		width: 45em;
+		max-height: 32em;
 	}
 	p {
 		max-width: 37.5em;
@@ -13,7 +13,9 @@
 	}
 }
 .home-gallery {
-	
+	@include bp(44) {
+		padding-bottom: 3em;
+	}
 	h2 {
 		text-align: center;
 		font-weight: 300;
