--- a/_scss/base.scss
+++ b/_scss/base.scss
@@ -13,7 +13,7 @@ html,body {
 	-webkit-font-smoothing: antialiased;
 }
 html {
-	background: $light-mustard;
+	background: white;
 }
 body {
 	background: #fff;
